--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -5,8 +5,8 @@ jobs:
   explore-actions :
     runs-on: ubuntu-latest
     steps:
-      -name: orint event 
-       run: echo "the job was automatically by a ${{github.event_name}} event."
+      -name : Print event 
+       run : echo "the job was automatically by a ${{ github.event_name }} event."
 
-      -name: Print the os of the runner
+      -name : Print the os of the runner
        run : echo "this job is now running on a ${{ runner.os }} server hosted by github!"
